# workshop-streamlit-aovivo

./: README.md  app.py  hello.py  pyproject.toml  requirements-app.txt  requirements.txt
app/: app.py  backend.py  frontend.py
data/: csv_invalido.csv  csv_valido.csv
exemplo/: app.py
