[tool.poetry]
name = "workshop-streamlit-aovivo"
version = "0.1.0"
description = ""
authors = ["lvgalvaofilho <lvgalvaofilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
streamlit = "^1.37.0"
openpyxl = "^3.1.5"
pydantic = {extras = ["email"], version = "^2.8.2"}
plotly = "^5.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
